--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 </head>
 
 <body>
-    <header>
-        <h1>My Schedule (Fall 2024)</h1>
-    </header>
     <table class="schedule">
+        <tr>
+            <td colspan="6">My Schedule (Fall 2024)</td>
+        </tr>
         <tr>
             <td>Day</td>
             <th>Monday</th>
